# battery-data-toolkit

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: gh-pages.yml  python-app.yml  python-package-conda.yml  python-package.yml
batdata/: __init__.py  cli.py  data.py  schemas.py  streaming.py  utils.py  version.py
batdata/exporters/: ba.py  base.py
batdata/extractors/: arbin.py  base.py  batteryarchive.py  batterydata.py  maccor.py  tIVT.py
batdata/loaders/: __init__.py  base.py  cnn.py
batdata/postprocess/: __init__.py  base.py  cycle_stats.py  integral.py  tagging.py  timing.py
batdata/schemas/: __init__.py  battery.py  column.py  cycling.py  eis.py  modeling.py  ontology.py
batdata/streaming/: __init__.py  hdf5.py
batdata/tests/: test_data.py  test_schema.py
battdat/: data.py
battdat/consistency/: __init__.py  base.py  current.py  time.py
battdat/exporters/: __init__.py  ba.py  base.py
battdat/extractors/: __init__.py  arbin.py  base.py  batteryarchive.py  batterydata.py  maccor.py  tIVT.py
battdat/io/: __init__.py  arbin.py  ba.py  base.py  batterydata.py  hdf.py  maccor.py  parquet.py
battdat/postprocess/: base.py  integral.py  tagging.py  timing.py
battdat/schemas/: __init__.py  battery.py  column.py  common.py  cycling.py  modeling.py  ontology.py  system.py
battdat/streaming/: __init__.py  hdf5.py
dev/: README.md  environment.yml
docs/: Makefile  README.md  conf.py  dataset.md  dataset.rst  export-schemas.py  export.md  export.rst  getting-started.rst  index.rst  make.bat  post-processing.md  schemas.md  schemas.rst
docs/features/: README.md  cell-capacity.ipynb  cycle-times.ipynb
docs/post-processing/: index.rst
docs/source/: io.rst  (+8 more)
notebooks/: README.md  extract-from-batterydata.ipynb
scripts/: severson.py
tests/: conftest.py  test_data.py  test_stream.py
(+71 files in other folders)
