[tool.poetry]
name = "battery-data-toolkit"
version = "0.1.1"
description = "Utilities for reading and manipulating battery testing data"
readme = "README.md"
requires-python = ">=3.9"
license = "LICENSE"
keywords = ["batteries", "science", "data science"]
authors = [
    "Logan Ward <lward@anl.gov>",
    "Noah Paulson <npaulson@anl.gov>",
    "Joseph Kubal <kubal@anl.gov>"
]
repository = "https://github.com/materials-data-facility/battery-data-toolkit"
packages = [
    { include = "batdata" },
]

[tool.poetry.dependencies]
pandas = ">1.0"
scipy = "^1.3"
pydantic = "^1.7"
tables = "^3.6"
h5py = "^3"
scythe-extractors = "^0.1"
tqdm = "*"
xlrd = "*"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-cov = "*"

[tool.poetry.scripts]
batdata-convert = "batdata.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
