[project]
name = "battery-data-toolkit"
version = "0.2.0"
description = "Utilities for reading and manipulating battery testing data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = 'LICENSE'}
keywords = ["batteries", "science", "data science"]
authors = [
    {name = "Logan Ward", email = "lward@anl.gov"},
    {name = "Noah Paulson", email = "lward@anl.gov"},
    {name = "Joseph Kubal", email = "kubal@anl.gov"},
]
dependencies = [
    "pandas > 1.0",
    "scipy > 1.3",
    "pydantic == 2.*",
    "tables > 3.6",
    "h5py == 3.*",
    "scythe-extractors >= 0.1",
    "xlrd"
]

[tool.setuptools.packages.find]
include = ["batdata*"]

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-cov'
]

[project.urls]
repository = "https://github.com/rovi-org/battery-data-toolkit"

[tool.poetry.scripts]
batdata-convert = "batdata.cli:main"
